bugs fixed, but bug with repeated home button chat overlapping

--- a/src/main/resources/com/example/demo/homePage.css
+++ b/src/main/resources/com/example/demo/homePage.css
@@ -7,7 +7,7 @@
 .label{
     -fx-font: bold 20pt Arial;
     -fx-text-fill: #08181c;
-    -fx-opacity: 0.9;
+    -fx-opacity: 1;
 }
 .button{
     -fx-background-color: #A6CDC6;
@@ -47,6 +47,7 @@
 }
 .rectangle{
     -fx-background-radius: 100;
+
 }
 #exitBtn{
     -fx-opacity: 0.8;
